force-app/main/default/objects/Plant__c/fields/Sunlight_Hours_Daily__c.field-meta.xml
<CustomField>
    <fullName>Sunlight_Hours_Daily__c</fullName>
    <label>Sunlight Hours Daily</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>