force-app/main/default/objects/Plant__c/fields/Sunlight_Percent__c.field-meta.xml
<CustomField>
    <fullName>Sunlight_Percent__c</fullName>
    <label>Sunlight Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>