force-app/main/default/objects/Plant__c/fields/Watering_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Watering_Frequency__c</fullName>
    <label>Watering Frequency</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>