force-app/main/default/objects/Plant__c/validationRules/Sunlight_Hours_Non_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Sunlight_Hours_Non_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Sunlight_Hours_Daily__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Sunlight_Hours_Daily__c</errorDisplayField>
    <errorMessage>Sunlight hours cannot be negative.</errorMessage>
</ValidationRule>