force-app/main/default/objects/Plant__c/validationRules/Watering_Frequency_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Watering_Frequency_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Watering_Frequency__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Watering_Frequency__c</errorDisplayField>
    <errorMessage>Watering frequency must be greater than 0.</errorMessage>
</ValidationRule>